js/src/tests/test262/language/import/import-defer/errors/module-throws/defer-import-after-evaluation.js
asyncTest
(
async
(
)
=
>
{
let
err1
;
await
import
(
"
.
/
throws_FIXTURE
.
js
"
)
.
catch
(
(
e
)
=
>
{
err1
=
e
}
)
;
assert
.
sameValue
(
err1
.
someError
"
the
error
from
throws_FIXTURE
"
)
;
const
{
ns
}
=
await
import
(
"
.
/
import
-
defer
-
throws_FIXTURE
.
js
"
)
;
let
err2
;
try
{
ns
.
foo
}
catch
(
e
)
{
err2
=
e
}
;
assert
.
sameValue
(
err1
err2
"
Evaluation
errors
are
thrown
for
modules
evaluated
before
getting
the
deferred
namespace
"
)
;
}
)
;
